# llm-lab

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: dev_workflow.md  releasing.md
scripts/: local_llm.py  mypy_smoke.sh  ollama_env.sh  ollama_serve.ps1  snapshot_project.sh
src/llm_lab/: __init__.py  __main__.py  cli.py  config.py  contracts.py  factory.py  ollama_local.py  settings.py  types.py
src/llm_lab/clients/: __init__.py  ollama.py  ollama_client.py  ollama_types.py  openai.py  openai_client.py
tests/: test_factory_runtime.py  test_local_llm_parsing.py  test_ollama_integration.py  test_openai_parsing.py  test_smoke.py  typecheck_smoke.py
tests/typecheck/: reveal_types.py
