[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-lab"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "ollama>=0.6.0",
  "httpx>=0.28",
  "pydantic>=2.9",
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.8",
  "pytest>=8.0",
]

[project.scripts]
llm-lab = "llm_lab.cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["llm_lab"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
pretty = true
files = ["src/llm_lab"]
strict = true
mypy_path = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
llm_lab = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]


[[tool.mypy.overrides]]
module = ["ollama", "ollama.*"]
ignore_missing_imports = true
